--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,14 +1,15 @@
-modLoader="javafml"
-loaderVersion="[4,)"
-license="Not specified"
+modLoader = "javafml"
+loaderVersion = "[4,)"
+license = "MIT"
 
 [[mods]]
-modId="rsfactory"
-version="1.0.0"
-displayName="RSFactory"
-displayURL="https://mcreator.net"
-credits="Created using mod maker MCreator - https://mcreator.net/about"
-authors="MCreator"
+modId = "gridflow"
+version = "0.1"
+displayName = "GridFlow"
+#displayURL="https://mcreator.net"
+credits = "Created using mod maker MCreator."
+authors = "MCreator"
+description = "Addon for Refined Storage. Allows monitoring the Grid's Flow!"
 
 # Start of user code block mod configuration
 # End of user code block mod configuration
@@ -17,26 +18,26 @@ authors="MCreator"
 # Start of user code block custom mixins
 # End of user code block custom mixins
 
-[[dependencies.rsfactory]]
-    modId="neoforge"
-    type="required"
-    versionRange="[21.1.176,)"
-    ordering="AFTER"
-    side="BOTH"
+[[dependencies.gridflow]]
+modId = "neoforge"
+type = "required"
+versionRange = "[21.1.176,)"
+ordering = "AFTER"
+side = "BOTH"
 
-[[dependencies.rsfactory]]
-    modId="minecraft"
-    type="required"
-    versionRange="[1.21.1]"
-    ordering="AFTER"
-    side="BOTH"
+[[dependencies.gridflow]]
+modId = "minecraft"
+type = "required"
+versionRange = "[1.21.1]"
+ordering = "AFTER"
+side = "BOTH"
 
-[[dependencies.rsfactory]]
-    modId="refinedstorage"
-    type="required"
-    versionRange="[0,)"
-    ordering="NONE"
-    side="BOTH"
+[[dependencies.gridflow]]
+modId = "refinedstorage"
+type = "required"
+versionRange = "[2,)"
+ordering = "NONE"
+side = "BOTH"
 
 
 
