--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'net.neoforged.moddev' version '2.0.95'
 }
 
-version = '1.0'
-base.archivesName = "modid"
+version = '0.1.1'
+base.archivesName = "gridflow"
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
