--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,14 +1,14 @@
-modLoader = "javafml"
-loaderVersion = "[4,)"
-license = "MIT"
+modLoader="javafml"
+loaderVersion="[4,)"
+license="Not specified"
 
 [[mods]]
-modId = "gridflow"
-version = "0.1"
-displayName = "GridFlow"
-#displayURL="https://mcreator.net"
-credits = "Created using mod maker MCreator."
-authors = "MCreator"
+modId="gridflow"
+version="1.0.0"
+displayName="GridFlow"
+displayURL="https://mcreator.net"
+credits="Created using mod maker MCreator - https://mcreator.net/about"
+authors="MCreator"
 description = "Addon for Refined Storage. Allows monitoring the Grid's Flow!"
 
 # Start of user code block mod configuration
@@ -19,25 +19,25 @@ description = "Addon for Refined Storage. Allows monitoring the Grid's Flow!"
 # End of user code block custom mixins
 
 [[dependencies.gridflow]]
-modId = "neoforge"
-type = "required"
-versionRange = "[21.1.176,)"
-ordering = "AFTER"
-side = "BOTH"
+    modId="neoforge"
+    type="required"
+    versionRange="[21.1.176,)"
+    ordering="AFTER"
+    side="BOTH"
 
 [[dependencies.gridflow]]
-modId = "minecraft"
-type = "required"
-versionRange = "[1.21.1]"
-ordering = "AFTER"
-side = "BOTH"
+    modId="minecraft"
+    type="required"
+    versionRange="[1.21.1]"
+    ordering="AFTER"
+    side="BOTH"
 
 [[dependencies.gridflow]]
-modId = "refinedstorage"
-type = "required"
-versionRange = "[2,)"
-ordering = "NONE"
-side = "BOTH"
+    modId="refinedstorage"
+    type="required"
+    versionRange="[2,)"
+    ordering="NONE"
+    side="BOTH"
 
 
 
